# my_dso

./: .gitignore  CMakeLists.txt  README.md  run
src/: main.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FrameShell.h  FullSystem.cpp  FullSystem.h  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector2.cpp  PixelSelector2.h
src/IOWrapper/: ImageDisplay.h  ImageRW.h  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_Opencv.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h
src/util/: DatasetReader.cpp  DatasetReader.h  ImageAndExposure.cpp  ImageAndExposure.h  MinimalImage.cpp  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalFuncs.h  globalutil.cpp  globalutil.h
